i18n/en/docusaurus-plugin-content-docs/version-3.4.0/features/moderation.mdx
---
title: Moderation
description: "RaidProtect's moderation commands (ban, kick, mute, jail, warn) and the centralized ModView help your moderators manage your Discord server."
---

import ModerationMockup from '@site/src/components/DiscordMessage/mockups/moderation';

<ModerationMockup />

import Icon from "@site/src/components/Icon";

To make your moderators' work easier, RaidProtect includes very handy moderation commands that let you interact directly with Discord's native features, such as **[banning](/en/learn/discord-sanctions)** and **kicking** users.

In addition to these actions, RaidProtect sends direct messages to the sanctioned user to explain the reason for their sanction, and this is also recorded in the server logs for your reference.

:::info
Moderation commands are [usable by prefix](../guides/prefix).
:::

:::info
All sanction commands accept the `[silent]` option to skip notifying the target by DM. Notification DMs (kick, softban, temporary ban) include a button with a server invite.
:::

## 🔍 Member Moderation View {#modview}

The `/modview` command opens a **centralized Moderation View** for a member: their sanctions, internal moderation note and last deleted message are gathered in a single response, with quick actions (sanction, edit the note, etc.).

Use the command: ```/modview (user)```

Replace `(user)` with the desired mention or ID.

:::tip
The command is also accessible via the context menu: right-click on a profile → **Apps** → **Open Modview**.
:::

## 🖱️ Sanction via the context menu {#context-menu}

In addition to slash commands, you can sanction a member directly from their profile via a right-click: **Apps** → **RaidProtect** → **Sanction**.

A window then opens allowing you to set:
- **Sanction type**: Select the type of sanction to apply.
- **Duration**: Enter a duration (optional, e.g.: `1d 2h 30m`).
- **Reason**: Specify the reason for the sanction.

## <Icon src="/img/icons/SanctionsBAN.svg" alt="icon SanctionsBAN" title=":iconSanctionsBAN:"/> Ban a user {#ban}

The `/ban` command lets you permanently prohibit a user from accessing your server.

Use the command: ```/ban (user) [delete-messages] [silent] [reason]```

Replace `(user)` with the desired mention or ID and `[reason]` with the reason for the sanction.

- `[delete-messages]`: duration of message history to delete (for example `1h`, `1d`, `7d`). Discord caps the deletion at 7 days maximum.
- `[silent]`: skip sending a DM to the target.

:::tip
You can ban a user from their [Discord ID](../guides/id), even if they are not online or present on your server.
:::

### <Icon src="/img/icons/SanctionsBANTemp.svg" alt="icon SanctionsBANTemp" title=":iconSanctionsBANTemp:"/>  Temporarily ban a user {#tempban}

The `/tempban` command lets you temporarily prohibit a user from accessing your server.

Use the command: ```/tempban (user) (duration) [delete-messages] [silent] [reason]```

Replace `(user)` with the desired mention or ID, `(duration)` with the ban duration, and `[reason]` with the reason for the sanction. The `[delete-messages]` parameter lets you delete the member's message history (up to 7 days).

### <Icon src="/img/icons/SanctionsSOFTBAN.svg" alt="icon SanctionsSOFTBAN" title=":iconSanctionsSOFTBAN:"/> Softban a user {#softban}

The `/softban` command bans then immediately unbans a member. This lets you **delete their message history** without permanently excluding them from the server: they can come back with a new invite.

Use the command: ```/softban (member) [delete-messages] [silent] [reason]```

Replace `(member)` with the desired mention or ID and `[reason]` with the reason for the sanction. The `[delete-messages]` parameter lets you choose the duration of messages to delete (default: 1 day).

:::tip
The softban is particularly well suited to **hacked accounts**: it cleans up the spam and frees the account, without permanently excluding the member once they have secured their account.
:::

### <Icon src="/img/icons/SanctionsUNBAN.svg" alt="icon SanctionsUNBAN" title=":iconSanctionsUNBAN:"/> Unban a user {#unban}

The `/unban` command lets you remove the ban from a previously banned user, allowing them to join your server again.

Use the command: ```/unban (user) [silent] [reason]```

Replace `(user)` with the desired ID and `[reason]` with the reason for the unban.

## <Icon src="/img/icons/SanctionsKICK.svg" alt="icon SanctionsKICK" title=":iconSanctionsKICK:" /> Kick a user {#kick}

The `/kick` command lets you remove a member from your server without banning them. The user will be able to rejoin the server if they have a valid invite.

Use the command: ```/kick (member) [silent] [reason]```

Replace `(member)` with the desired mention or ID and `[reason]` with the reason for the sanction.

## <Icon src="/img/icons/SanctionsTIMEOUT.svg" alt="icon SanctionsTIMEOUT" title=":iconSanctionsTIMEOUT:" /> Timeout (or Mute) a user {#timeout}

The `/mute` command lets you temporarily restrict a member's ability to interact on the server. During this period, the member will not be able to send messages, react, join voice channels, or send direct messages to other members.

Use the command: ```/mute (member) (duration) [force_timeout] [silent] [reason]```

Replace `(member)` with the desired mention or ID, `(duration)` with the mute duration (e.g.: `10m`, `1h`, `1d`), and `[reason]` with the reason for the sanction.

:::tip
The `[force_timeout]` parameter lets you override the threshold rule and force the use of Discord's timeout, even if a Mute role is configured.

You can configure a [Mute role](./sanctions.mdx#mute) and a [mute threshold](./sanctions.mdx#mute-threshold) in `/settings` > Sanctions. Beyond the defined threshold, the bot will automatically apply the Mute role instead of Discord's timeout, allowing durations longer than 28 days.
:::

### <Icon src="/img/icons/SanctionsUNTIMEOUT.svg" alt="icon SanctionsUNTIMEOUT" title=":iconSanctionsUNTIMEOUT:" /> Remove a user's timeout {#untimeout}

The `/unmute` command lets you immediately remove the restrictions from a member in timeout, allowing them to regain all their interaction capabilities on the server.

Use the command: ```/unmute (member) [silent] [reason]```

Replace `(member)` with the desired mention or ID and `[reason]` with the reason for removing the timeout.

## <Icon src="/img/icons/SanctionsJAIL.svg" alt="icon SanctionsJAIL" title=":iconSanctionsJAIL:" /> Jail a user {#jail}

The `/jail` command lets you isolate a member by assigning them a restrictive role. The Jail is intended as an alternative to banning: the member keeps very limited access to the server instead of being completely excluded from it.

Use the command: ```/jail (member) [silent] [reason]```

Replace `(member)` with the desired mention or ID and `[reason]` with the reason for the sanction.

:::warning
The [Jail role](./sanctions.mdx#jail) must be configured via `/settings` before you can use this command.
:::

### <Icon src="/img/icons/SanctionsJAILTemp.svg" alt="icon SanctionsJAILTemp" title=":iconSanctionsJAILTemp:" /> Temporarily jail a user {#tempjail}

The `/tempjail` command lets you temporarily jail a member for a defined duration.

Use the command: ```/tempjail (member) (duration) [silent] [reason]```

Replace `(member)` with the desired mention or ID, `(duration)` with the jail duration, and `[reason]` with the reason for the sanction.

### <Icon src="/img/icons/SanctionsUNJAIL.svg" alt="icon SanctionsUNJAIL" title=":iconSanctionsUNJAIL:" /> Release a user {#unjail}

The `/unjail` command lets you remove the Jail role from a member, allowing them to regain their normal access to the server.

Use the command: ```/unjail (member) [silent] [reason]```

Replace `(member)` with the desired mention or ID and `[reason]` with the reason for the release.

## <Icon src="/img/icons/SanctionsWARN.svg" alt="icon SanctionsWARN" title=":iconSanctionsWARN:" /> Warn a user {#warn}

The `/warn` command lets you formally warn a member via a private message sent by the bot.

Use the command: ```/warn (member) [silent] [reason]```

Replace `(member)` with the desired mention or ID and `[reason]` with the reason for the warning.

## 📝 Moderation note {#note}

The `/note` command lets you add or edit a member's **internal moderation note**, without having to go through [`/modview`](#modview). The note is only visible to moderators.

Use the command: ```/note (user)```

Replace `(user)` with the desired mention or ID. A window opens to enter or edit the note.

## 🏷️ Change a member's nickname {#nick}

The `/nick` command lets you change a member's nickname on the server, or reset it.

Use the command: ```/nick (member) [nickname]```

Replace `(member)` with the desired mention or ID. The `[nickname]` parameter is the new nickname to apply (32 characters maximum). If omitted, the member's nickname is reset.

:::info
The command requires the Discord **Manage Nicknames** permission and is also accessible via the aliases `nickname`, `rename` and `setnick` as a [prefix command](../guides/prefix). Changes are recorded in the server logs.
:::

## 🧹 Delete a group of messages {#clear}

The `/clear` command lets you quickly delete a certain number of messages in a text channel. You can specify a user to delete only their messages.

Use the command: ```/clear (number) [user]```

Replace `(number)` with the number of messages you want to delete (maximum 100). Add `[user]` using the mention or ID to target only their messages in the channel.

## 🕒 Enable slowmode in a channel {#slowmode}

The `/slowmode` command lets you enable or modify the slowmode of a text channel, in order to limit how frequently users can send messages.

Use the command: ```/slowmode (delay) [duration] [channel] [reason]```

- Replace `(delay)` with the desired time between each message (e.g.: `5s`, `1m`, `10m`, `1h`; `0` to disable).
- Add `[duration]` to automatically disable the slowmode after this duration (e.g. `30m`, `2h`).
- Add `[channel]` if you want to apply slowmode to a different channel than the one where you type the command.
- Add `[reason]` to specify the reason, which will be recorded in the server logs.

## 🕵️ Retrieve a deleted message {#snipe}

The `/snipe` command lets you retrieve the **last deleted message** in a channel, or the last deleted message of a specific user, within the past hour.

Use the command: ```/snipe [user]```

- Without an argument: shows the last deleted message in the current channel.
- With `[user]`: shows the last message deleted by that user.

From the response, you can **sanction the author** or **delete the message** (if it is still present in the channel).

:::info
`/snipe` is a **temporary solution** while waiting for the logs update. Only messages deleted in the past hour are available.
:::

## 📋 Moderation logs {#logs}

By default, moderation logs are sent to RaidProtect's main log channel. You can configure a dedicated log channel to separate moderation actions from other logs.

1. Use the [command `/settings`](../setup.md#settings).
2. Click on the "**Logs**" button.
3. Select "**Moderation**".
4. Choose the channel where moderation logs will be sent or use the "**Create one for me**" button.